// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test AddTodo component should match AddTodo snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-fsQjcA jVeHvD"
      >
        <div
          class="sc-qRuZU lcwWSj"
        >
          <div
            class="sc-gueXAH hWXdbp"
            styles="font-size: 20px; font-weight: 600;"
          >
            New Task Todo
          </div>
          <div
            class="sc-jsMaUZ kfzPNd"
          />
        </div>
        <div
          style="margin-bottom: 16px;"
        >
          <div
            class="sc-gueXAH gRHGwY"
            style="font-size: 14px; font-weight: 500;"
          >
            Title Task
          </div>
          <input
            aria-label="Title Task"
            class="sc-iAEzLF gTKcTi"
            placeholder="Enter new task todo..."
            style="min-width: 294px; max-width: 438px; width: 100%;"
            type="text"
            value=""
          />
        </div>
        <div
          class="sc-gueXAH bAvcGT"
          styles="font-weight: 500; margin-bottom: 8px;"
        >
          Category
        </div>
        <div
          class="sc-kFuvnu dtTRrU"
        >
          <button
            buttontype="primary"
            class="sc-gLDymS dItXMH"
            data-testid="upcoming-button"
            style="height: 36px; min-height: 36px; padding: 0px 16px; display: flex; align-items: center; gap: 8px; width: 130px; background-color: rgb(182, 180, 185);"
            type="button"
          >
            <svg
              fill="currentColor"
              height="16"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm64-192c0-8.8 7.2-16 16-16h96c8.8 0 16 7.2 16 16v96c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16v-96zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"
              />
            </svg>
            Upcoming
          </button>
          <button
            buttontype="primary"
            class="sc-gLDymS dItXMH"
            data-testid="important-button"
            style="height: 36px; min-height: 36px; padding: 0px 16px; display: flex; align-items: center; gap: 8px; width: 130px; background-color: rgb(182, 180, 185);"
            type="button"
          >
            <svg
              color="#d28312"
              fill="currentColor"
              height="16"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.01 21.01c0 1.1.89 1.99 1.99 1.99s1.99-.89 1.99-1.99h-3.98zM12 6c2.76 0 5 2.24 5 5v7H7v-7c0-2.76 2.24-5 5-5zm0-4.5c-.83 0-1.5.67-1.5 1.5v1.17C7.36 4.85 5 7.65 5 11v6l-2 2v1h18v-1l-2-2v-6c0-3.35-2.36-6.15-5.5-6.83V3c0-.83-.67-1.5-1.5-1.5zM11 8h2v4h-2zm0 6h2v2h-2z"
              />
            </svg>
            Important
          </button>
          <button
            buttontype="primary"
            class="sc-gLDymS dItXMH"
            data-testid="urgent-button"
            style="height: 36px; min-height: 36px; padding: 0px 16px; display: flex; align-items: center; gap: 8px; width: 130px; background-color: rgb(100, 89, 227);"
            type="button"
          >
            <svg
              color="#db0f25"
              fill="currentColor"
              height="16"
              stroke="currentColor"
              stroke-width="0"
              style="transform: rotate(270deg);"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="m3.5 18.99 11 .01c.67 0 1.27-.33 1.63-.84L20.5 12l-4.37-6.16c-.36-.51-.96-.84-1.63-.84l-11 .01L8.34 12 3.5 18.99z"
              />
            </svg>
            Urgent
          </button>
        </div>
        <div
          class="sc-gueXAH bAvcGT"
          styles="font-weight: 500; margin-bottom: 8px;"
        >
          Description
        </div>
        <textarea
          class="sc-fbJSV liFuaL"
          placeholder="Enter description..."
        />
        <div
          class="sc-irTrJD dQTfHZ"
        >
          <div
            class="sc-gueXAH hmBKDZ"
            styles="font-size: 14px; font-weight: 500;"
          >
            Notification
          </div>
          <div
            class="form-check form-switch"
          >
            <input
              class="form-check-input"
              id="flexSwitchCheckDefault"
              role="switch"
              style="width: 40px; height: 20px;"
              type="checkbox"
            />
          </div>
        </div>
        <div
          class="sc-brKelq eBpLhd"
        >
          <button
            buttontype="secondary"
            class="sc-gLDymS jcdnJc"
            data-testid="cancel-todo-button"
            style="flex: 1;"
            type="button"
          >
            Cancel
          </button>
          <button
            buttontype="primary"
            class="sc-gLDymS dItXMH"
            data-testid="add-todo-button"
            style="flex: 1;"
            type="button"
          >
            Create
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-fsQjcA jVeHvD"
    >
      <div
        class="sc-qRuZU lcwWSj"
      >
        <div
          class="sc-gueXAH hWXdbp"
          styles="font-size: 20px; font-weight: 600;"
        >
          New Task Todo
        </div>
        <div
          class="sc-jsMaUZ kfzPNd"
        />
      </div>
      <div
        style="margin-bottom: 16px;"
      >
        <div
          class="sc-gueXAH gRHGwY"
          style="font-size: 14px; font-weight: 500;"
        >
          Title Task
        </div>
        <input
          aria-label="Title Task"
          class="sc-iAEzLF gTKcTi"
          placeholder="Enter new task todo..."
          style="min-width: 294px; max-width: 438px; width: 100%;"
          type="text"
          value=""
        />
      </div>
      <div
        class="sc-gueXAH bAvcGT"
        styles="font-weight: 500; margin-bottom: 8px;"
      >
        Category
      </div>
      <div
        class="sc-kFuvnu dtTRrU"
      >
        <button
          buttontype="primary"
          class="sc-gLDymS dItXMH"
          data-testid="upcoming-button"
          style="height: 36px; min-height: 36px; padding: 0px 16px; display: flex; align-items: center; gap: 8px; width: 130px; background-color: rgb(182, 180, 185);"
          type="button"
        >
          <svg
            fill="currentColor"
            height="16"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm64-192c0-8.8 7.2-16 16-16h96c8.8 0 16 7.2 16 16v96c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16v-96zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"
            />
          </svg>
          Upcoming
        </button>
        <button
          buttontype="primary"
          class="sc-gLDymS dItXMH"
          data-testid="important-button"
          style="height: 36px; min-height: 36px; padding: 0px 16px; display: flex; align-items: center; gap: 8px; width: 130px; background-color: rgb(182, 180, 185);"
          type="button"
        >
          <svg
            color="#d28312"
            fill="currentColor"
            height="16"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.01 21.01c0 1.1.89 1.99 1.99 1.99s1.99-.89 1.99-1.99h-3.98zM12 6c2.76 0 5 2.24 5 5v7H7v-7c0-2.76 2.24-5 5-5zm0-4.5c-.83 0-1.5.67-1.5 1.5v1.17C7.36 4.85 5 7.65 5 11v6l-2 2v1h18v-1l-2-2v-6c0-3.35-2.36-6.15-5.5-6.83V3c0-.83-.67-1.5-1.5-1.5zM11 8h2v4h-2zm0 6h2v2h-2z"
            />
          </svg>
          Important
        </button>
        <button
          buttontype="primary"
          class="sc-gLDymS dItXMH"
          data-testid="urgent-button"
          style="height: 36px; min-height: 36px; padding: 0px 16px; display: flex; align-items: center; gap: 8px; width: 130px; background-color: rgb(100, 89, 227);"
          type="button"
        >
          <svg
            color="#db0f25"
            fill="currentColor"
            height="16"
            stroke="currentColor"
            stroke-width="0"
            style="transform: rotate(270deg);"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="m3.5 18.99 11 .01c.67 0 1.27-.33 1.63-.84L20.5 12l-4.37-6.16c-.36-.51-.96-.84-1.63-.84l-11 .01L8.34 12 3.5 18.99z"
            />
          </svg>
          Urgent
        </button>
      </div>
      <div
        class="sc-gueXAH bAvcGT"
        styles="font-weight: 500; margin-bottom: 8px;"
      >
        Description
      </div>
      <textarea
        class="sc-fbJSV liFuaL"
        placeholder="Enter description..."
      />
      <div
        class="sc-irTrJD dQTfHZ"
      >
        <div
          class="sc-gueXAH hmBKDZ"
          styles="font-size: 14px; font-weight: 500;"
        >
          Notification
        </div>
        <div
          class="form-check form-switch"
        >
          <input
            class="form-check-input"
            id="flexSwitchCheckDefault"
            role="switch"
            style="width: 40px; height: 20px;"
            type="checkbox"
          />
        </div>
      </div>
      <div
        class="sc-brKelq eBpLhd"
      >
        <button
          buttontype="secondary"
          class="sc-gLDymS jcdnJc"
          data-testid="cancel-todo-button"
          style="flex: 1;"
          type="button"
        >
          Cancel
        </button>
        <button
          buttontype="primary"
          class="sc-gLDymS dItXMH"
          data-testid="add-todo-button"
          style="flex: 1;"
          type="button"
        >
          Create
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test AddTodo component should match update todo snapshot with desktop view 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-fsQjcA jVeHvD"
      >
        <div
          class="sc-qRuZU lcwWSj"
        >
          <div
            class="sc-gueXAH hWXdbp"
            styles="font-size: 20px; font-weight: 600;"
          >
            Update Task Todo
          </div>
          <div
            class="sc-jsMaUZ kfzPNd"
          />
        </div>
        <div
          style="margin-bottom: 16px;"
        >
          <div
            class="sc-gueXAH gRHGwY"
            style="font-size: 14px; font-weight: 500;"
          >
            Title Task
          </div>
          <input
            aria-label="Title Task"
            class="sc-iAEzLF gTKcTi"
            placeholder="Enter new task todo..."
            style="max-width: 438px; min-width: 294px; width: 100%;"
            type="text"
            value="333333"
          />
        </div>
        <div
          class="sc-gueXAH bAvcGT"
          styles="font-weight: 500; margin-bottom: 8px;"
        >
          Category
        </div>
        <div
          class="sc-kFuvnu dtTRrU"
        >
          <button
            buttontype="primary"
            class="sc-gLDymS dItXMH"
            data-testid="upcoming-button"
            style="height: 36px; min-height: 36px; padding: 0px 16px; display: flex; align-items: center; gap: 8px; width: 130px; background-color: rgb(182, 180, 185);"
            type="button"
          >
            <svg
              fill="currentColor"
              height="16"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm64-192c0-8.8 7.2-16 16-16h96c8.8 0 16 7.2 16 16v96c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16v-96zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"
              />
            </svg>
            Upcoming
          </button>
          <button
            buttontype="primary"
            class="sc-gLDymS dItXMH"
            data-testid="important-button"
            style="height: 36px; min-height: 36px; padding: 0px 16px; display: flex; align-items: center; gap: 8px; width: 130px; background-color: rgb(182, 180, 185);"
            type="button"
          >
            <svg
              color="#d28312"
              fill="currentColor"
              height="16"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.01 21.01c0 1.1.89 1.99 1.99 1.99s1.99-.89 1.99-1.99h-3.98zM12 6c2.76 0 5 2.24 5 5v7H7v-7c0-2.76 2.24-5 5-5zm0-4.5c-.83 0-1.5.67-1.5 1.5v1.17C7.36 4.85 5 7.65 5 11v6l-2 2v1h18v-1l-2-2v-6c0-3.35-2.36-6.15-5.5-6.83V3c0-.83-.67-1.5-1.5-1.5zM11 8h2v4h-2zm0 6h2v2h-2z"
              />
            </svg>
            Important
          </button>
          <button
            buttontype="primary"
            class="sc-gLDymS dItXMH"
            data-testid="urgent-button"
            style="height: 36px; min-height: 36px; padding: 0px 16px; display: flex; align-items: center; gap: 8px; width: 130px; background-color: rgb(100, 89, 227);"
            type="button"
          >
            <svg
              color="#db0f25"
              fill="currentColor"
              height="16"
              stroke="currentColor"
              stroke-width="0"
              style="transform: rotate(270deg);"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="m3.5 18.99 11 .01c.67 0 1.27-.33 1.63-.84L20.5 12l-4.37-6.16c-.36-.51-.96-.84-1.63-.84l-11 .01L8.34 12 3.5 18.99z"
              />
            </svg>
            Urgent
          </button>
        </div>
        <div
          class="sc-gueXAH bAvcGT"
          styles="font-weight: 500; margin-bottom: 8px;"
        >
          Description
        </div>
        <textarea
          class="sc-fbJSV liFuaL"
          placeholder="Enter description..."
        >
          3333333
        </textarea>
        <div
          class="sc-irTrJD dQTfHZ"
        >
          <div
            class="sc-gueXAH hmBKDZ"
            styles="font-size: 14px; font-weight: 500;"
          >
            Notification
          </div>
          <div
            class="form-check form-switch"
          >
            <input
              checked=""
              class="form-check-input"
              id="flexSwitchCheckDefault"
              role="switch"
              style="width: 40px; height: 20px;"
              type="checkbox"
            />
          </div>
        </div>
        <div
          class="sc-csCNwM gNPNHg"
        >
          <div
            class="MuiFormControl-root MuiTextField-root css-z3c6am-MuiFormControl-root-MuiTextField-root"
          >
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-o9k5xi-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r0:"
                inputmode="text"
                placeholder="hh:mm aa"
                type="text"
                value="01:00 AM"
              />
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
              >
                <button
                  aria-label="Choose time, selected time is 1:00 AM"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1yq5fb3-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ClockIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-ihdtdm"
                >
                  <span
                    class="notranslate"
                  >
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root css-z3c6am-MuiFormControl-root-MuiTextField-root"
          >
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-o9k5xi-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r2:"
                inputmode="text"
                placeholder="MM/DD/YYYY"
                type="text"
                value="05/10/2024"
              />
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
              >
                <button
                  aria-label="Choose date, selected date is May 10, 2024"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1yq5fb3-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="CalendarIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-ihdtdm"
                >
                  <span
                    class="notranslate"
                  >
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="sc-brKelq eBpLhd"
        >
          <button
            buttontype="secondary"
            class="sc-gLDymS jcdnJc"
            data-testid="cancel-todo-button"
            style="flex: 1;"
            type="button"
          >
            Cancel
          </button>
          <button
            buttontype="primary"
            class="sc-gLDymS dItXMH"
            data-testid="add-todo-button"
            style="flex: 1;"
            type="button"
          >
            Update
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-fsQjcA jVeHvD"
    >
      <div
        class="sc-qRuZU lcwWSj"
      >
        <div
          class="sc-gueXAH hWXdbp"
          styles="font-size: 20px; font-weight: 600;"
        >
          Update Task Todo
        </div>
        <div
          class="sc-jsMaUZ kfzPNd"
        />
      </div>
      <div
        style="margin-bottom: 16px;"
      >
        <div
          class="sc-gueXAH gRHGwY"
          style="font-size: 14px; font-weight: 500;"
        >
          Title Task
        </div>
        <input
          aria-label="Title Task"
          class="sc-iAEzLF gTKcTi"
          placeholder="Enter new task todo..."
          style="max-width: 438px; min-width: 294px; width: 100%;"
          type="text"
          value="333333"
        />
      </div>
      <div
        class="sc-gueXAH bAvcGT"
        styles="font-weight: 500; margin-bottom: 8px;"
      >
        Category
      </div>
      <div
        class="sc-kFuvnu dtTRrU"
      >
        <button
          buttontype="primary"
          class="sc-gLDymS dItXMH"
          data-testid="upcoming-button"
          style="height: 36px; min-height: 36px; padding: 0px 16px; display: flex; align-items: center; gap: 8px; width: 130px; background-color: rgb(182, 180, 185);"
          type="button"
        >
          <svg
            fill="currentColor"
            height="16"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm64-192c0-8.8 7.2-16 16-16h96c8.8 0 16 7.2 16 16v96c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16v-96zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"
            />
          </svg>
          Upcoming
        </button>
        <button
          buttontype="primary"
          class="sc-gLDymS dItXMH"
          data-testid="important-button"
          style="height: 36px; min-height: 36px; padding: 0px 16px; display: flex; align-items: center; gap: 8px; width: 130px; background-color: rgb(182, 180, 185);"
          type="button"
        >
          <svg
            color="#d28312"
            fill="currentColor"
            height="16"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.01 21.01c0 1.1.89 1.99 1.99 1.99s1.99-.89 1.99-1.99h-3.98zM12 6c2.76 0 5 2.24 5 5v7H7v-7c0-2.76 2.24-5 5-5zm0-4.5c-.83 0-1.5.67-1.5 1.5v1.17C7.36 4.85 5 7.65 5 11v6l-2 2v1h18v-1l-2-2v-6c0-3.35-2.36-6.15-5.5-6.83V3c0-.83-.67-1.5-1.5-1.5zM11 8h2v4h-2zm0 6h2v2h-2z"
            />
          </svg>
          Important
        </button>
        <button
          buttontype="primary"
          class="sc-gLDymS dItXMH"
          data-testid="urgent-button"
          style="height: 36px; min-height: 36px; padding: 0px 16px; display: flex; align-items: center; gap: 8px; width: 130px; background-color: rgb(100, 89, 227);"
          type="button"
        >
          <svg
            color="#db0f25"
            fill="currentColor"
            height="16"
            stroke="currentColor"
            stroke-width="0"
            style="transform: rotate(270deg);"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="m3.5 18.99 11 .01c.67 0 1.27-.33 1.63-.84L20.5 12l-4.37-6.16c-.36-.51-.96-.84-1.63-.84l-11 .01L8.34 12 3.5 18.99z"
            />
          </svg>
          Urgent
        </button>
      </div>
      <div
        class="sc-gueXAH bAvcGT"
        styles="font-weight: 500; margin-bottom: 8px;"
      >
        Description
      </div>
      <textarea
        class="sc-fbJSV liFuaL"
        placeholder="Enter description..."
      >
        3333333
      </textarea>
      <div
        class="sc-irTrJD dQTfHZ"
      >
        <div
          class="sc-gueXAH hmBKDZ"
          styles="font-size: 14px; font-weight: 500;"
        >
          Notification
        </div>
        <div
          class="form-check form-switch"
        >
          <input
            checked=""
            class="form-check-input"
            id="flexSwitchCheckDefault"
            role="switch"
            style="width: 40px; height: 20px;"
            type="checkbox"
          />
        </div>
      </div>
      <div
        class="sc-csCNwM gNPNHg"
      >
        <div
          class="MuiFormControl-root MuiTextField-root css-z3c6am-MuiFormControl-root-MuiTextField-root"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-o9k5xi-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r0:"
              inputmode="text"
              placeholder="hh:mm aa"
              type="text"
              value="01:00 AM"
            />
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
            >
              <button
                aria-label="Choose time, selected time is 1:00 AM"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1yq5fb3-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="ClockIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                  <path
                    d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-ihdtdm"
              >
                <span
                  class="notranslate"
                >
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root css-z3c6am-MuiFormControl-root-MuiTextField-root"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-o9k5xi-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r2:"
              inputmode="text"
              placeholder="MM/DD/YYYY"
              type="text"
              value="05/10/2024"
            />
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
            >
              <button
                aria-label="Choose date, selected date is May 10, 2024"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1yq5fb3-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="CalendarIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-ihdtdm"
              >
                <span
                  class="notranslate"
                >
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="sc-brKelq eBpLhd"
      >
        <button
          buttontype="secondary"
          class="sc-gLDymS jcdnJc"
          data-testid="cancel-todo-button"
          style="flex: 1;"
          type="button"
        >
          Cancel
        </button>
        <button
          buttontype="primary"
          class="sc-gLDymS dItXMH"
          data-testid="add-todo-button"
          style="flex: 1;"
          type="button"
        >
          Update
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
